# ossm-tasks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
ap-tasks/: STEF.xsd
ap_tasks/: STEF.xsd  __init__.py  config.py  test.py
ap_tasks/core/: __init__.py  reward.py  task.py
ap_tasks/core/builder/: __init__.py  entities.py
ap_tasks/core/event/: __init__.py  movement.py
ap_tasks/models/bodies/: empty.xml
ap_tasks/models/bodies/surrogates/: fixation_point.xml
ap_tasks/suite/eye_tracking/: eye_tracking.xml
ap_tasks/util/: parsing.py
ossm_tasks/: STEF.xsd  __init__.py  run.py
ossm_tasks/core/: __init__.py  task.py
ossm_tasks/core/builder/: base.py
ossm_tasks/core/event/: __init__.py  event.py  movement.py
ossm_tasks/models/bodies/surrogates/: fixation_point.xml
ossm_tasks/suite/eye_tracking/: eye_tracking.xml
ossm_tasks/util/: parsing.py
