[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ap_tasks"
authors = [
    {name = "AngoraPy Team"},
    {name = "Tonio Weidler", email = "research@tonioweidler.de"},
]
description = "Enactive sensorimotor task API and suite."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",

    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Neuroscience",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Computational Neuroscience",
]
dependencies = [
    "numpy",
    "gymnasium >= 1.0.0"
]

[project.urls]
Homepage = "http://angorapy.org"
Repository = "https://github.com/angorapy/ap-tasks"

