[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ossm_tasks"
authors = [
  { name = "Tonio Weidler", email = "research@tonioweidler.de" },
  { name = "Mario Senden", email = "mario.senden@maastrichtuniversity.nl" }
]
description = "Enactive sensorimotor task API, suite, and standards (STEF)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
keywords = ["computational neuroscience", "sensorimotor", "standards", "open science"]
version = "0.1.0"

dependencies = [
    "numpy",
    "gymnasium >= 1.0.0",
    "dm_control == 1.0.26 ",
    'mujoco',

    "xmlschema"
]

[project.urls]
Homepage = "https://github.com/ossm-team/ossm-tasks"
Repository = "https://github.com/ossm-team/ossm-tasks"
Issues = "https://github.com/ossm-team/ossm-tasks/issues"

[project.entry-points."ossm_lab.suite"]
